# acr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: .pages  1. Overview.md  2. Shield.md  3. Usage.md  4. Output formats.md
inc/: .led.h.swp  acr.h  cones_loader.hpp  defines.h  file_browser.hpp  font_manager.hpp  gpio.h  gps.hpp  gui.hpp  icon_manager.hpp  led.h  main.h  map.hpp  notifications.hpp  utils.h  utils.hpp
services/: acr.service
src/: .led.c.swp  .main.c.swp  acr.c  cones_loader.cpp  file_browser.cpp  font_manager.cpp  gpio.c  gps.cpp  gui.cpp  icon_manager.cpp  led.c  main.c  map.cpp  notifications.cpp  utils.c  utils.cpp  viewer.cpp
